# RssParse

./: CMakeLists.txt  README.md  main.cpp  rsspars.txt  rssparse
.cache/clangd/index/: main.cpp.F38BB01B468650C2.idx  rssparse.cpp.CC130ED0A2347724.idx  rssparse.h.A7D62D0ECEAD3DB4.idx  tinyxml2.cpp.83FCBC5AFB867DB9.idx  tinyxml2.cpp.F892BA1F671916C5.idx  tinyxml2.h.606E658EBE15AF38.idx  tinyxml2.h.72784F4DF175CFC7.idx
RssParse/include/: rssparse.h
RssParse/src/: rssparse.cpp
TinyXml/include/: tinyxml2.h
TinyXml/src/: tinyxml2.cpp
